// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`printDebugValue 1`] = `
Object {
  "dependencies": Array [
    Object {
      "name": "ObservableObject@1.euro",
    },
    Object {
      "name": "ObservableObject@1.pound?",
    },
    Object {
      "dependencies": Array [
        Object {
          "name": "ObservableObject@1.euro",
        },
      ],
      "name": "ObservableObject@1.pound",
    },
  ],
  "name": "Autorun@3",
}
`;

exports[`printDebugValue 2`] = `
Object {
  "name": "Autorun@3",
}
`;
